# o2gethem

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  config.py  dependencies.py  main.py  pyproject.toml
backend/api/: auth.py  dating.py  messages.py  posts.py  users.py
backend/middleware/: exception_handler.py
backend/models/: requests.py  responses.py
backend/services/: dating_service.py  post_service.py  session_service.py  user_service.py
backend/tests/: test_api.py
backend/utils/: responses.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: Modal.tsx  PostCard.tsx
frontend/src/components/__tests__/: PostCard.test.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Dating.tsx  Login.tsx  Mailbox.tsx  Posts.tsx  Profile.tsx  Register.tsx
frontend/src/services/: api.ts
frontend/src/store/: authSlice.ts
frontend/src/types/: index.ts
